--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -98,7 +98,7 @@
 
         <!-- Левая часть -->
         <div class="lg:flex-1 p-3 md:p-5 pb-0 md:pb-0 lg:pb-4 2xl:p-7 flex flex-col justify-between z-1 relative">
-            <div class="font-serif space-y-4 2xl:space-y-3 max-w-[300px] md:max-w-max md:w-[376px] xl:w-[420px] 2xl:w-[525px]">
+            <div class="font-serif !space-y-4 2xl:!space-y-3 max-w-[300px] md:max-w-max md:w-[376px] xl:w-[420px] 2xl:w-[525px]">
                 <div class="contact-block__line1 text-white/60">Спасибо, что долистали до конца</div>
                 <div class="contact-block__line2 text-white">Самое время обсудить проект</div>
             </div>
@@ -131,7 +131,7 @@
         <!-- Правая часть - форма -->
         <div class="contact-block__form relative max-lg:flex-1">
             <form class="bg-white rounded-[18px] md:rounded-3xl flex flex-col p-2 lg:p-3 xl:p-2 h-full" method="post">
-                <div class="space-y-5 p-3 md:p-4 lg:p-3 xl:p-4">
+                <div class="!space-y-5 p-3 md:p-4 lg:p-3 xl:p-4">
                     <div class="form-row">
                         <label class="form-label">Услуги</label>
 
@@ -196,7 +196,7 @@
                         </div>
                     </div>
 
-                    <label class="flex items-start gap-2 cursor-pointer select-none">
+                    <label class="flex items-start gap-2 cursor-pointer select-none relative">
                         <input type="checkbox" name="agree" required class="visually-hidden"/>
 
                         <span class="form-checkbox block"></span>
@@ -287,7 +287,7 @@
         </picture>
         <!-- Левая часть -->
         <div class="lg:flex-1 p-3 md:p-5 pb-0 md:pb-0 lg:pb-4 2xl:p-7 flex flex-col justify-between z-1 relative">
-            <div class="font-serif space-y-4 2xl:space-y-3 max-w-[300px] md:max-w-max md:w-[300px] lg:w-[330px] xl:w-[420px] 2xl:w-[525px]">
+            <div class="font-serif !space-y-4 2xl:!space-y-3 max-w-[300px] md:max-w-max md:w-[300px] lg:w-[330px] xl:w-[420px] 2xl:w-[525px]">
                 <div class="contact-block__line1 text-white/60">Спасибо, что долистали до конца</div>
                 <div class="contact-block__line2 text-white">
                     <span class="max-md:hidden">Как насчёт кросс-промо?</span>
@@ -324,7 +324,7 @@
         <!-- Правая часть - форма -->
         <div class="contact-block__form relative max-lg:flex-1">
             <form class="bg-white rounded-[18px] md:rounded-3xl flex flex-col p-2 lg:p-3 xl:p-2 h-full" method="post">
-                <div class="space-y-5 p-3 md:p-4 lg:p-3 xl:p-4">
+                <div class="!space-y-5 p-3 md:p-4 lg:p-3 xl:p-4">
                     <div class="form-row">
                         <input type="text" name="name" class="form-field" placeholder="Имя">
                     </div>
@@ -344,7 +344,7 @@
                         <textarea name="message" class="form-field resize-y min-h-8 md:max-h-30 lg:max-h-32 3xl:max-h-50" rows="1" auto-grow placeholder="Расскажите о вашем предложении"></textarea>
                     </div>
 
-                    <label class="flex items-start gap-2 cursor-pointer select-none">
+                    <label class="flex items-start gap-2 cursor-pointer select-none relative">
                         <input type="checkbox" name="agree" required class="visually-hidden"/>
 
                         <span class="form-checkbox block"></span>
@@ -435,7 +435,7 @@
         </picture>
         <!-- Левая часть -->
         <div class="lg:flex-1 p-3 md:p-5 pb-0 md:pb-0 lg:pb-4 2xl:p-7 flex flex-col justify-between z-1 relative">
-            <div class="font-serif space-y-4 2xl:space-y-3 max-w-[300px] md:max-w-max md:w-[300px] lg:w-[370px] xl:w-[400px] 2xl:w-[466px]">
+            <div class="font-serif !space-y-4 2xl:!space-y-3 max-w-[300px] md:max-w-max md:w-[300px] lg:w-[370px] xl:w-[400px] 2xl:w-[466px]">
                 <div class="contact-block__line1 text-blue-900/60">Спасибо, что долистали до конца</div>
                 <div class="contact-block__line2 text-blue-900">В поиске крутых коллег?</div>
             </div>
@@ -467,7 +467,7 @@
         <!-- Правая часть - форма -->
         <div class="contact-block__form relative max-lg:flex-1">
             <form class="bg-white rounded-[18px] md:rounded-3xl flex flex-col p-2 lg:p-3 xl:p-2 h-full" method="post">
-                <div class="space-y-5 p-3 md:p-4 lg:p-3 xl:p-4">
+                <div class="!space-y-5 p-3 md:p-4 lg:p-3 xl:p-4">
                     <div class="form-row">
                         <input type="text" name="name" class="form-field" placeholder="Имя">
                     </div>
@@ -485,7 +485,7 @@
                         <input type="text" name="portfolio" class="form-field" placeholder="Ссылка на резюме, портфолио или сайт">
                     </div>
 
-                    <label class="flex items-start gap-2 cursor-pointer select-none">
+                    <label class="flex items-start gap-2 cursor-pointer select-none relative">
                         <input type="checkbox" name="agree" required class="visually-hidden"/>
 
                         <span class="form-checkbox block"></span>
@@ -597,8 +597,12 @@
         </nav>
 
         <div class="flex gap-3.5">
-            <a href="#" class="flex items-center justify-center size-9 xl:size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-telegram size-5 xl:size-6"></i></a>
-            <a href="#" class="flex items-center justify-center size-9 xl:size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900"><i class="icon icon-vk size-5 xl:size-6"></i></a>
+            <a href="https://t.me/tolkunov_com" target="_blank" class="flex items-center justify-center size-9 xl:size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900">
+                <i class="icon icon-telegram size-5 xl:size-6"></i>
+            </a>
+            <a href="https://vk.com/tolkunov_com" target="_blank" class="flex items-center justify-center size-9 xl:size-11 rounded-xl ring-[1.5px] ring-slate-150 text-blue-900">
+                <i class="icon icon-vk size-5 xl:size-6"></i>
+            </a>
         </div>
     </section>
 
