fixed plyr video controls. fixed bg hover images load.

--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -533,11 +533,11 @@
     <!-- Dima video modal -->
     <div id="modal-video-dima" data-open="false" class="video-modal video-modal_dima">
         <div class="video-modal__backdrop absolute inset-0"></div>
-        <div class="video-modal__dialog relative rounded-5xl overflow-hidden aspect-video">
+        <div class="video-modal__dialog relative rounded-5xl overflow-hidden">
             <button type="button" class="video-modal__close" data-close aria-label="Закрыть">
                 <i class="icon icon-close size-8"></i>
             </button>
-            <div class="video-modal__body rounded-5xl overflow-hidden w-full h-full">
+            <div class="video-modal__body rounded-5xl overflow-hidden w-full aspect-video">
                 <video class="video-modal__player plyr-js" playsinline controls preload="none">
                     <source src="https://tolkunov.com/uploads/contacts/dima_source_converted.webm" type="video/webm">
                     <source src="https://tolkunov.com/uploads/contacts/dima_source_converted.mp4" type="video/mp4">
@@ -549,11 +549,11 @@
     <!-- Tanya video modal -->
     <div id="modal-video-tanya" data-open="false" class="video-modal video-modal_tanya">
         <div class="video-modal__backdrop absolute inset-0"></div>
-        <div class="video-modal__dialog relative rounded-5xl overflow-hidden aspect-video">
+        <div class="video-modal__dialog relative rounded-5xl overflow-hidden">
             <button type="button" class="video-modal__close" data-close aria-label="Закрыть">
                 <i class="icon icon-close size-8"></i>
             </button>
-            <div class="video-modal__body rounded-5xl overflow-hidden w-full h-full">
+            <div class="video-modal__body rounded-5xl overflow-hidden w-full aspect-video">
                 <video class="video-modal__player plyr-js" playsinline controls preload="none">
                     <source src="https://tolkunov.com/uploads/contacts/tanya_source_converted.webm" type="video/webm">
                     <source src="https://tolkunov.com/uploads/contacts/tanya_source_converted.mp4" type="video/mp4">
@@ -565,11 +565,11 @@
     <!-- Olya video modal -->
     <div id="modal-video-olya" data-open="false" class="video-modal video-modal_olya">
         <div class="video-modal__backdrop absolute inset-0"></div>
-        <div class="video-modal__dialog relative rounded-5xl overflow-hidden aspect-video">
+        <div class="video-modal__dialog relative rounded-5xl overflow-hidden">
             <button type="button" class="video-modal__close" data-close aria-label="Закрыть">
                 <i class="icon icon-close size-8"></i>
             </button>
-            <div class="video-modal__body rounded-5xl overflow-hidden w-full h-full">
+            <div class="video-modal__body rounded-5xl overflow-hidden w-full aspect-video">
                 <video class="video-modal__player plyr-js" playsinline controls preload="none">
                     <source src="https://tolkunov.com/uploads/contacts/olya_source_converted.webm" type="video/webm">
                     <source src="https://tolkunov.com/uploads/contacts/olya_source_converted.mp4" type="video/mp4">
