footer: update button removed disabled cursor

--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -685,7 +685,7 @@
                 <!-- Кнопка обновления -->
                 <button
                         type="button"
-                        class="footer-case__refresh group absolute bottom-5 right-5 inline-flex items-center justify-center p-1 rounded-full size-7 bg-white border-none transition-all inset-ring-[1.5px] inset-ring-slate-40 hover:backdrop-blur-sm z-10 disabled:cursor-not-allowed"
+                        class="footer-case__refresh group absolute bottom-5 right-5 inline-flex items-center justify-center p-1 rounded-full size-7 bg-white border-none transition-all inset-ring-[1.5px] inset-ring-slate-40 hover:backdrop-blur-sm z-10"
                         data-refresh-url="http://tolkunov.local/test"
                         aria-label="Обновить"
                 >
@@ -717,7 +717,7 @@
                 <!-- Кнопка обновления -->
                 <button
                         type="button"
-                        class="footer-review__refresh group absolute bottom-5 right-5 inline-flex items-center justify-center p-1 rounded-full size-7 bg-white border-none transition-all inset-ring-[1.5px] inset-ring-slate-40 hover:backdrop-blur-sm z-10 disabled:cursor-not-allowed"
+                        class="footer-review__refresh group absolute bottom-5 right-5 inline-flex items-center justify-center p-1 rounded-full size-7 bg-white border-none transition-all inset-ring-[1.5px] inset-ring-slate-40 hover:backdrop-blur-sm z-10"
                         data-refresh-url="http://tolkunov.local/test"
                         aria-label="Обновить отзыв"
                 >
