--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -621,46 +621,46 @@
         <div class="md:hidden h-px w-full bg-slate-150"></div>
 
         <!-- footer services -->
-        <div class="footer-services flex flex-col items-start gap-8 md:gap-5 lg:gap-0 md:max-lg:ml-2.5">
-            <a href="#" class="footer-services__item group">
-                <span class="footer-services__label">Баннеры</span>
+        <div class="services-menu flex flex-col items-start gap-8 md:gap-5 lg:gap-0 md:max-lg:ml-2.5">
+            <a href="#" class="services-menu__item group">
+                <span class="services-menu__label">Баннеры</span>
 
-                <div class="footer-services__tags">
-                    <span class="footer-services__tag">HTML5</span>
-                    <span class="footer-services__tag">Статика</span>
-                    <span class="footer-services__tag">Видео</span>
+                <div class="services-menu__tags">
+                    <span class="services-menu__tag">HTML5</span>
+                    <span class="services-menu__tag">Статика</span>
+                    <span class="services-menu__tag">Видео</span>
                 </div>
             </a>
-            <a href="#" class="footer-services__item group">
-                <span class="footer-services__label">Наружка</span>
+            <a href="#" class="services-menu__item group">
+                <span class="services-menu__label">Наружка</span>
 
-                <div class="footer-services__tags">
-                    <span class="footer-services__tag">OOH</span>
-                    <span class="footer-services__tag">DOOH</span>
-                    <span class="footer-services__tag">MF</span>
+                <div class="services-menu__tags">
+                    <span class="services-menu__tag">OOH</span>
+                    <span class="services-menu__tag">DOOH</span>
+                    <span class="services-menu__tag">MF</span>
                 </div>
             </a>
-            <a href="#" class="footer-services__item group">
-                <span class="footer-services__label">2D</span>
+            <a href="#" class="services-menu__item group">
+                <span class="services-menu__label">2D</span>
 
-                <div class="footer-services__tags">
-                    <span class="footer-services__tag">Иллюстрации</span>
-                    <span class="footer-services__tag">Моушн</span>
+                <div class="services-menu__tags">
+                    <span class="services-menu__tag">Иллюстрации</span>
+                    <span class="services-menu__tag">Моушн</span>
                 </div>
             </a>
-            <a href="#" class="footer-services__item group">
-                <span class="footer-services__label">3D</span>
+            <a href="#" class="services-menu__item group">
+                <span class="services-menu__label">3D</span>
 
-                <div class="footer-services__tags">
-                    <span class="footer-services__tag">Иллюстрации</span>
-                    <span class="footer-services__tag">Моушн</span>
+                <div class="services-menu__tags">
+                    <span class="services-menu__tag">Иллюстрации</span>
+                    <span class="services-menu__tag">Моушн</span>
                 </div>
             </a>
-            <a href="#" class="footer-services__item group">
-                <span class="footer-services__label">Лендинги</span>
+            <a href="#" class="services-menu__item group">
+                <span class="services-menu__label">Лендинги</span>
 
-                <div class="footer-services__tags">
-                    <span class="footer-services__tag">СПЕЦПРОЕКТЫ</span>
+                <div class="services-menu__tags">
+                    <span class="services-menu__tag">СПЕЦПРОЕКТЫ</span>
                 </div>
             </a>
         </div>
