--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -1,10 +1,10 @@
-<header class="header m-3" data-open="false">
+<header class="header lg:m-3 xl:m-4" data-open="true">
     <div class="h-[72px] relative">
         <div class="header__container">
             <section class="header__main">
                 <div class="flex flex-nowrap items-center gap-4">
-                    <a href="#" class="header__logo flex flex-nowrap items-center gap-3 w-[152px]">
-                        <i class="icon icon-logo size-10 text-blue-600"></i>
+                    <a href="#" class="header__logo flex flex-nowrap items-center gap-3 w-[152px] xl:w-[170px]">
+                        <i class="icon icon-logo size-10 xl:size-11 text-blue-600"></i>
                         <span>Продакшн</span>
                     </a>
                     <span class="w-px h-4.5 bg-[#E9EDF5]"></span>
@@ -34,27 +34,27 @@
 
             <section class="header__extra">
                 <!-- header verticals -->
-                <div class="flex flex-col gap-4 w-[152px]">
+                <div class="flex flex-col gap-4">
                     <!--            <div class="xl:p-2 pb-0 text-slate-430 font-serif font-bold xl:font-medium 2xl:font-bold text-[15px] xl:text-sm 2xl:text-[15px] 2xl:leading-[25px]">А ещё мы делаем</div>-->
 
                     <div class="flex flex-col items-start font-glina text-2xl leading-[57%] tracking-[-0.48px]">
                         <a href="https://tolkunov.com/journal-soon"
-                           class="group inline-flex items-center gap-2 p-2 rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#FD375B] hover:bg-[#F4F6FA]">
+                           class="group inline-flex items-center gap-2 xl:gap-1.5 p-2 xl:px-3 rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#FD375B] hover:bg-[#F4F6FA]">
                             <i class="icon icon-logo size-7 transition-colors"></i>
                             <span class="text-blue-900">Журнал</span>
                         </a>
                         <a href="https://tolkunov.com/academy"
-                           class="group inline-flex items-center gap-2 p-2 rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#0CF2F2] hover:bg-[#F4F6FA]">
+                           class="group inline-flex items-center gap-2 xl:gap-1.5 p-2 xl:px-3  rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#0CF2F2] hover:bg-[#F4F6FA]">
                             <i class="icon icon-logo size-7 transition-colors"></i>
                             <span class="text-blue-900">Академия</span>
                         </a>
                         <a href="https://tolkunov.com/services"
-                           class="group inline-flex items-center gap-2 p-2 rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#6928F6] hover:bg-[#F4F6FA]">
+                           class="group inline-flex items-center gap-2 xl:gap-1.5 p-2 xl:px-3  rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#6928F6] hover:bg-[#F4F6FA]">
                             <i class="icon icon-logo size-7 transition-colors"></i>
                             <span class="text-blue-900">Сервисы</span>
                         </a>
                         <a href="https://tolkunov.com/market"
-                           class="group inline-flex items-center gap-2 p-2 rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#A7F628] hover:bg-[#F4F6FA]">
+                           class="group inline-flex items-center gap-2 xl:gap-1.5 p-2 xl:px-3  rounded-xl !no-underline transition-colors text-blue-900 hover:text-[#A7F628] hover:bg-[#F4F6FA]">
                             <i class="icon icon-logo size-7 transition-colors"></i>
                             <span class="text-blue-900">Маркет</span>
                         </a>
@@ -64,7 +64,7 @@
                 <div class="w-px h-full bg-[#E9EDF5]"></div>
 
                 <!-- footer services -->
-                <div class="services-menu flex flex-col items-start gap-8 md:gap-5 lg:gap-0 md:max-lg:ml-2.5">
+                <div class="services-menu flex flex-col items-start gap-8 md:gap-5 lg:gap-0 md:max-lg:ml-2.5 xl:-mx-2">
                     <a href="#" class="services-menu__item group">
                         <span class="services-menu__label">Баннеры</span>
 
@@ -108,19 +108,21 @@
                     </a>
                 </div>
 
-                <div class="">
+                <div class="w-px h-full bg-[#E9EDF5] max-xl:hidden"></div>
+
+                <div class="xl:mx-4">
                     <div class="header-contact">
                         <div class="header-contact__img"></div>
                     </div>
 
-                    <div class="mt-4 flex flex-col gap-2 font-sans font-medium">
+                    <div class="mt-4 xl:mt-2 flex flex-col gap-2 font-sans font-medium">
                         <div class="flex flex-col gap-1 p-3 rounded-2xl bg-[#F4F6FA]">
                             <span class="text-blue-600 text-[13px]/4">Дмитрий Толкунов</span>
-                            <span class="text-blue-900 text-xs/4">Привет! Я фаундер агентства</span>
+                            <span class="text-blue-900 text-xs/4 xl:text-[13px]/4">Привет! Я фаундер агентства</span>
                         </div>
 
-                        <div class="flex flex-col items-start gap-3 px-3 py-2.5 rounded-2xl bg-[#F4F6FA]">
-                            <span class="text-blue-900 text-xs/4">Отвечу на вопросы, составлю смету, поставлю задачи команде, проконтролирую качество</span>
+                        <div class="flex flex-col items-start gap-3 px-3 py-2.5 xl:px-2.5 rounded-2xl bg-[#F4F6FA]">
+                            <span class="text-blue-900 text-xs/4 xl:text-[13px]/4">Отвечу на вопросы, составлю смету, поставлю задачи команде, проконтролирую качество</span>
                             <a href="https://t.me/tolkunovdb" target="_blank" class="flex items-center gap-2 px-3.5 py-2.5 rounded-xl bg-white text-blue-900 font-glina text-lg/3.5 !no-underline">
                                 <i class="icon icon-telegram-full size-3"></i>
                                 <span class="">Написать</span>
