--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -64,7 +64,7 @@
                 <div class="w-px h-full bg-[#E9EDF5]"></div>
 
                 <!-- footer services -->
-                <div class="services-menu flex flex-col items-start gap-8 md:gap-5 lg:gap-0 md:max-lg:ml-2.5 xl:-mx-2">
+                <div class="services-menu services-menu_small flex flex-col items-start gap-8 md:gap-5 lg:gap-0 md:max-lg:ml-2.5 xl:-mx-2">
                     <a href="#" class="services-menu__item group">
                         <span class="services-menu__label">Баннеры</span>
 
