--- a/src/css/header-extra.css
+++ b/src/css/header-extra.css
@@ -1,6 +1,6 @@
 .header__extra {
     @apply px-4 pt-1 pb-4;
-    @apply xl:pl-3;
+    @apply xl:pl-3 xl:pt-0 xl:-mt-0.5;
     @apply rounded-3xl bg-white;
 
     @apply grid grid-cols-[152px_1px_max-content_216px_auto] gap-x-4;
