header: done 1600 adaptive

--- a/src/css/header-extra.css
+++ b/src/css/header-extra.css
@@ -4,5 +4,6 @@
     @apply rounded-3xl bg-white;
 
     @apply grid grid-cols-[152px_1px_max-content_216px_auto] gap-x-4;
-    @apply xl:grid-cols-[174px_1px_max-content_1px_276px_auto] xl:gap-x-4;
+    @apply xl:grid-cols-[174px_1px_max-content_1px_276px_auto];
+    @apply 3xl:grid-cols-[174px_1px_332px_1px_332px_auto];
 }
