--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -1,4 +1,4 @@
-<header class="header lg:m-3 xl:m-4" data-open="true">
+<header class="header" data-open="false">
     <div class="h-[72px] relative">
         <div class="header__container">
             <section class="header__main">
